change show detail layout.

--- a/src/Adstacy/AppBundle/Resources/public/less/variables.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/variables.less
@@ -1,6 +1,6 @@
 @body-bg: #fbfbfb;
 @brand-primary: #e18a07;
-@border-color: #ddd;
+@border-color: #ccc;
 @input-border-focus: #bbb;
 @navbar-default-brand-color: @brand-primary;
 @navbar-default-brand-hover-color: darken(@navbar-default-brand-color, 10%);
