change primary color.

--- a/src/Adstacy/AppBundle/Resources/public/less/variables.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/variables.less
@@ -1,5 +1,5 @@
 @body-bg: #fbfbfb;
-@brand-primary: #e18a07;
+@brand-primary: #78a300;
 @border-color: #ccc;
 @input-border-focus: #bbb;
 @navbar-default-brand-color: @brand-primary;
