--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -77,7 +77,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="{{ path('homepage') }}">Adstacy</a>
+              <a class="navbar-brand" href="{{ path('homepage') }}"><img src="{{ asset('bundles/adstacyapp/img/logo.png') }}" /></a>
             </div>
 
             <div class="collapse navbar-collapse navbar-ex1-collapse">
