--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -3,10 +3,6 @@ body {
   padding-top: 70px;
 }
 
-p {
-  font-size: 13px;
-}
-
 .masonry {
   margin: auto;
 }
@@ -27,7 +23,7 @@ p {
   width: 236px;
   margin: 14px 7px 0 7px;
   background-color: #fff;
-  border-radius: 5px 5px 0 0;
+  border-radius: @border-radius-base;
   box-shadow: 0 0 1px #333;
 
   .promote, .unpromote {
@@ -45,15 +41,18 @@ p {
   .ad-user {
     padding: 5px;
   }
+  p {
+    font-size: 13px;
+  }
 }
 
 .pic {
   background-image: url('../img/diagonal-line.png');
-  border-radius: 5px 5px 0 0;
+  border-radius: @border-radius-base @border-radius-base 0 0;
 
   img {
     background: url('../img/spinner.gif') no-repeat center center;
-    border-radius: 5px 5px 0 0;
+    border-radius: @border-radius-small @border-radius-small 0 0;
   }
 }
 
@@ -178,7 +177,7 @@ ul.nav-expand {
       font-weight: bold;
       background-color: @gray-lighter;
       box-shadow: inset 0 0 3px 0 rgba(200,200,200,.9);
-      border-radius: 5px;
+      border-radius: @border-radius-base;
     }
   }
 }
@@ -361,9 +360,7 @@ a.url {
   width: 750px;
   margin: auto;
   background-color: #fff;
-  border-radius: 5px;
-  border: 1px solid @border-color;
-  box-shadow: 0 3px 3px 0 @border-color;
+  border-radius: @border-radius-base;
 }
 
 .ad-detail-section {
@@ -375,7 +372,12 @@ a.url {
   }
 
   p {
+    font-size: @font-size-base;
     margin: 0;
+
+    a {
+      font-weight: bold;
+    }
   }
 }
 .wall-container {
@@ -410,7 +412,7 @@ a.url {
   height: 110px;
   display: inline-block;
   margin: 10px 0 0 10px;
-  border-radius: 2px;
+  border-radius: @border-radius-small;
 }
 .follow-container {
   padding: 0 10px 10px;
