comment out unused bootstrap components.

--- a/src/Adstacy/AppBundle/Resources/public/less/adstacy.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/adstacy.less
@@ -11,9 +11,9 @@
 // Core CSS
 @import "@{path}/scaffolding.less";
 @import "@{path}/type.less";
-@import "@{path}/code.less";
+// @import "@{path}/code.less";
 // @import "@{path}/grid.less";
-@import "@{path}/tables.less";
+// @import "@{path}/tables.less";
 @import "@{path}/forms.less";
 @import "@{path}/buttons.less";
 
@@ -25,26 +25,26 @@
 @import "@{path}/input-groups.less";
 @import "@{path}/navs.less";
 @import "@{path}/navbar.less";
-@import "@{path}/breadcrumbs.less";
-@import "@{path}/pagination.less";
-@import "@{path}/pager.less";
+// @import "@{path}/breadcrumbs.less";
+// @import "@{path}/pagination.less";
+// @import "@{path}/pager.less";
 @import "@{path}/labels.less";
 @import "@{path}/badges.less";
-@import "@{path}/jumbotron.less";
-@import "@{path}/thumbnails.less";
+// @import "@{path}/jumbotron.less";
+// @import "@{path}/thumbnails.less";
 @import "@{path}/alerts.less";
-@import "@{path}/progress-bars.less";
+// @import "@{path}/progress-bars.less";
 @import "@{path}/media.less";
 @import "@{path}/list-group.less";
 @import "@{path}/panels.less";
-@import "@{path}/wells.less";
+// @import "@{path}/wells.less";
 @import "@{path}/close.less";
 
 // Components w/ JavaScript
 @import "@{path}/modals.less";
 @import "@{path}/tooltip.less";
-@import "@{path}/popovers.less";
-@import "@{path}/carousel.less";
+// @import "@{path}/popovers.less";
+// @import "@{path}/carousel.less";
 
 // Utility classes
 @import "@{path}/utilities.less";
