--- a/src/Adstacy/AppBundle/Resources/public/less/variables.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/variables.less
@@ -1,5 +1,5 @@
 @body-bg: #333;
-@brand-primary: #78a300;
+@brand-primary: #b00;
 @navbar-default-bg: #fff;
 @border-color: #ccc;
 @input-border-focus: #bbb;
