--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -12,7 +12,12 @@ p {
 }
 
 .navbar {
-  box-shadow: 0 1px 2px #999;
+  box-shadow: 0 3px 10px #000;
+
+  .icon-search {
+    font-size: 16px; 
+    margin-right: 10px;
+  }
 }
 
 .body {
@@ -28,7 +33,7 @@ p {
   margin: 14px 7px 0 7px;
   background-color: #fff;
   border-radius: 5px 5px 0 0;
-  box-shadow: 0 0 1px #333;
+  box-shadow: 0 1px 6px #000;
 
   .promote, .unpromote {
     width: 86px;
