add transition on link.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -2,6 +2,10 @@ body {
   padding-top: 70px;
 }
 
+a {
+  .transition(all .2s ease-in-out);
+}
+
 .masonry {
   margin: auto;
 }
@@ -10,7 +14,7 @@ body {
   box-shadow: 0 2px 8px #000;
 
   .icon-search {
-    font-size: 16px; 
+    font-size: 16px;
     margin-right: 10px;
   }
 
