--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -7,11 +7,15 @@ body {
 }
 
 .navbar {
-  box-shadow: 0 3px 10px #000;
+  box-shadow: 0 2px 8px #000;
 
   .icon-search {
     font-size: 16px; 
     margin-right: 10px;
+  }
+
+  .btn-default {
+    box-shadow: 0 0 2px #cacaca;
   }
 }
 
@@ -66,6 +70,7 @@ body {
 }
 
 #search-bar {
+  box-shadow: 0 0 10px #cacaca inset;
   padding-right: 40px;
   width: 360px;
   &:focus + button span {
@@ -188,8 +193,10 @@ ul.nav-expand {
 }
 
 #navbar-expand-container {
-  padding: 10px 0;
+  background-color: #f5f5f5;
   border-top: 1px solid @border-color;
+  box-shadow: 0 1px 5px #ccc inset;
+  padding: 10px 0;
 
   a {
     display: block;
@@ -221,6 +228,8 @@ ul.nav-expand {
 .w25 { width: 25%; }
 
 #create-ads {
+  border-color: 1px solid #555;
+  box-shadow: 0 0 2px #555;
   margin-right: 20px;
   padding: 6px 12px;
   color: #fff;
@@ -403,12 +412,18 @@ ul.nav-expand {
 #footer {
   list-style-type: none;
   padding: 10px 0 0;
-  border-top: 1px solid @border-color;
+  border-top: 1px dotted @border-color;
 
   li {
     float: left;
     padding: 0 7px;
     border-right: 1px solid @border-color;
+
+    a {
+      color: #aaa;
+      font-size: 12px;
+      font-weight: bold;
+    }
 
     &:last-child {
       border-right: 0;
