--- a/src/Adstacy/AppBundle/Resources/public/less/variables.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/variables.less
@@ -1,6 +1,6 @@
 @body-bg: #333;
 @brand-primary: #b00;
-@navbar-default-bg: #fff;
+@navbar-default-bg: #f5f5f5;
 @border-color: #ccc;
 @input-border-focus: #bbb;
 @navbar-default-brand-color: @brand-primary;
