--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -193,7 +193,7 @@ ul.nav-expand {
 }
 
 #navbar-expand-container {
-  background-color: #f5f5f5;
+  background-color: #fff;
   border-top: 1px solid @border-color;
   box-shadow: 0 1px 5px #ccc inset;
   padding: 10px 0;
