Redesign Ad template and promote button.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -34,6 +34,14 @@ body {
   border-radius: @border-radius-base;
   box-shadow: 0 1px 6px #000;
 
+  .btn-promote {
+    border-radius: 0;
+    border-left: 0;
+    border-right: 0;
+    font-size: 13px;
+    font-weight: bold;
+    padding: 5px;
+  }
   .promote, .unpromote {
     width: 86px;
   }
@@ -270,7 +278,6 @@ ul.nav-expand {
   .user-label {
     color: #aaa;
     font-size: 10px;
-    font-weight: bold;
   }
   .user-realname {
     color: #888;
