Redesign ad detail template.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -362,6 +362,7 @@ ul.nav-expand {
 }
 
 .ad-detail-section {
+  border-top: 1px solid @border-color;
   border-bottom: 1px solid @border-color;
   padding: 10px;
 
