--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -254,6 +254,22 @@ ul.nav-expand {
     min-width: 110px;
     text-align: left;
   }
+  .btn-user {
+    padding: 0;
+  }
+  .mini-profpic {
+    border-right: 1px solid #ccc; 
+    display: inline-block; 
+    height: 32px; 
+    margin: 0;
+  }
+  .username-label {
+    color: #888;
+    font-weight: bold;
+    display:inline-block; 
+    padding: 5px 12px;
+    vertical-align: middle;
+  }
 }
 
 .select2-container {
