Combine user ads and promotes to one.

--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -6,10 +6,10 @@
       width="{{ thumb_width }}px" height="{{ ad.thumbHeight }}px" alt="{{ ad.description }}">
     </a>
   </div>
+  {% set promoted = app.user.hasPromote(ad) %}
   <div class="ad-desc">
     <div>
       {% if app.user %}
-        {% set promoted = app.user.hasPromote(ad) %}
         {% if promoted %}
           <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" class="btn btn-success btn-promote btn-block">{{ ad.promoteesCount }} promotes &nbsp; <span aria-hidden="true" class="icon-bullhorn"></span></a>
         {% else %}
@@ -17,6 +17,9 @@
         {% endif %}
       {% endif %}
     </div>
+    {% if promoted %}
+    <span class="promoted"><i class="icon-bullhorn"></i></span>
+    {% endif %}
     <div class="desc">
       <p>{{ parse_url(parse_hashtag(ad.description)) }}</p>
     </div>
