--- a/src/Adstacy/AppBundle/Resources/views/Search/search.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Search/search.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Search{% endblock %}
 
 {% block content %}
-  <div class="adstacy-container">
+  <div class="search-menu-container adstacy-container panel panel-default">
     <ul class="nav nav-pills">
       <li {% if search == 'ads' %}class="active"{% endif %}><a href="{{ path('adstacy_app_search_ads', {q: app.request.query.get('q')}) }}">Ads</a></li>
       <li {% if search == 'users' %}class="active"{% endif %}><a href="{{ path('adstacy_app_search_users', {q: app.request.query.get('q')}) }}">Users</a></li>
