--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -34,16 +34,42 @@ body {
   border-radius: @border-radius-base;
   box-shadow: 0 1px 6px #000;
 
+  .share-container {
+    padding: 0 10px 5px 10px;
+  }
   .btn-promote {
-    border-radius: 0;
     border-left: 0;
     border-right: 0;
-    font-size: 13px;
+    font-size: 11px;
     font-weight: bold;
     padding: 5px;
+    width: 85px;
   }
-  .promote, .unpromote {
-    width: 86px;
+  .btn-share {
+    font-size: 11px;
+    font-weight: bold;
+    padding: 5px;
+
+    /*.twitter-share {*/
+      /*color: #1c95d0;*/
+    /*}*/
+  }
+  .social-list {
+    a {
+      color: #888;
+      font-size: 12px;
+      font-weight: bold;
+      padding: 3px 10px;
+    }
+  }
+  .btn-group>.btn:not(:first-child):not(:last-child):not(.dropdown-toggle) {
+    border-bottom-left-radius: 4px;
+    border-top-left-radius: 4px;
+  }
+  .promotes-count {
+    font-size: 11px;
+    font-weight: bold;
+    padding: 5px 10px;
   }
   .box-medium {
     width: 150px;
@@ -74,6 +100,7 @@ body {
 }
 
 .desc {
+  border-top: 1px solid #ddd;
   padding: 7px 14px;
 }
 
@@ -293,13 +320,15 @@ ul.nav-expand {
   }
   .user-label {
     color: #aaa;
-    font-size: 10px;
+    font-size: 11px;
   }
   .user-realname {
-    color: #888;
-    font-size: 12px;
+    font-size: 13px;
     font-weight: bold;
-    margin-top: 2px;
+    margin-bottom: 4px;
+    a {
+      color: #888;
+    }
   }
 }
 
