--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -8,21 +8,36 @@
   </div>
   {% set promoted = app.user.hasPromote(ad) %}
   <div class="ad-desc">
-    <div>
-      {% if app.user %}
-        {% if promoted %}
-          <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" class="btn btn-success btn-promote btn-block">{{ ad.promoteesCount }} promotes &nbsp; <span aria-hidden="true" class="icon-bullhorn"></span></a>
-        {% else %}
-          <a href="{{ path('adstacy_app_ad_unpromote', {id: ad.id}) }}" class="btn btn-primary btn-promote btn-block">{{ ad.promoteesCount }} promotes &nbsp; <span aria-hidden="true" class="icon-bullhorn"></span></a>
-        {% endif %}
-      {% endif %}
-    </div>
     {% if promoted %}
     <span class="promoted"><i class="icon-bullhorn"></i></span>
     {% endif %}
     <div class="desc">
       <p>{{ parse_url(parse_hashtag(ad.description)) }}</p>
     </div>
+    {% if app.user %}
+      <div class="share-container">
+        <div class="btn-group">
+          <a href="{{ path('adstacy_app_ad_unpromote', {id: ad.id}) }}" class="btn btn-primary btn-promote unpromote {% if not promoted %}hide{% endif %}"><span class="icon-bullhorn"></span> Unpromote</a>
+          <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" class="btn btn-primary btn-promote promote {% if promoted %}hide{% endif %}"><span class="icon-bullhorn"></span> Promote</a>
+          <button type="button" class="btn btn-default promotes-count">{{ ad.promoteesCount }}</button>
+        </div>
+        <div class="btn-group">
+          <a class="btn-share btn btn-default dropdown-toggle" data-toggle="dropdown">
+            <span class="icon-share"> Share</span>
+          </a>
+          <ul class="social-list dropdown-menu" role="menu">
+            <li>
+              <a href="{{ app.request.uri }}" class="facebook-share">
+                <span aria-hidden="true" data-icon="&#xe003;"></span> Facebook
+              </a>
+              <a href="{{ app.request.uri }}" class="tweet" data-via="adstacy" data-text="{{ ad.description }}">
+                <span aria-hidden="true" data-icon="&#xe002;" class="twitter-share"></span> Twitter
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    {% endif %}
     <div class="ad-user clearfix border-top">
       {% include 'AdstacyAppBundle:User:user_mini.html.twig' with { user: ad.user, text: ago(ad.created) } %}
     </div>
