--- a/src/Adstacy/AppBundle/Resources/public/less/utilities.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/utilities.less
@@ -3,3 +3,14 @@
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
+.w1 { width: 10%; }
+.w2 { width: 20%; }
+.w3 { width: 30%; }
+.w4 { width: 40%; }
+.w5 { width: 50%; }
+.w6 { width: 60%; }
+.w7 { width: 70%; }
+.w8 { width: 80%; }
+.w9 { width: 90%; }
+.w25 { width: 25%; }
