--- a/src/Adstacy/AppBundle/Resources/views/User/user_mini.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/user_mini.html.twig
@@ -2,7 +2,9 @@
   {% set text = 'Created by' %}
 {% endif %}
 <div class="user-mini">
-  <div class="profile-picture"><img src="{{ profile_pic(user) }}" alt="{{ user.username }}" /></div>
+  <div class="profile-picture">
+    <img src="{{ profile_pic(user) }}" alt="{{ user.username }}">
+  </div>
   <div class="user-desc">
       <div class="user-realname">
         <a href="{{ path('adstacy_app_user_profile', {username: user.username}) }}">{{ user.username }}</a>
