--- a/src/Adstacy/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Security/login.html.twig
@@ -32,11 +32,11 @@
         <input type="password" class="form-control input-lg" id="_password" name="_password" required="required" placeholder="Password">
 
         <div class="inline-block">
-          <div class="w5">
+          <div class="block-item w5">
             <input type="checkbox" id="_remember_me" name="_remember_me" value="on">
             <label for="_remember_me">{{ 'security.login.remember_me'|trans }}</label>
           </div>
-          <div class="w5">
+          <div class="block-item w5">
             <input type="submit" class="btn btn-primary btn-lg pull-right" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}">
           </div>
         </div>
