Customize error pages.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -474,3 +474,24 @@ ul.nav-expand {
 .mce-fullscreen {
   z-index: 9999 !important;
 }
+
+#error-page {
+  margin-top: 50px;
+  text-align: center;
+  color: #fff;
+  h2 {
+    font-size: 6em;
+    margin-bottom: 30px;
+  }
+  h3 {
+    font-size: 2em;
+    margin-bottom: 50px;
+  }
+  a {
+    margin-right: 20px;
+    color: @brand-success;
+  }
+  a.btn {
+    color: #fff;
+  }
+}
