--- a/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
@@ -8,37 +8,37 @@
   {% set user = ad.user %}
 
   <div class="ad-detail-container container-margin">
-      <div class="toolbar clearfix">
-        <div>
-          {% include 'AdstacyAppBundle:User:user_mini.html.twig' with { user: ad.user, text: '2 minutes ago' } %}
-        </div>
-        <div class="pull-right">
-          <div class="btn-group">
-            {% set promoted = app.user.hasPromote(ad) %}
-            <a href="{{ path('adstacy_app_ad_unpromote', {id: ad.id}) }}" class="btn btn-primary unpromote {% if not promoted %}hide{% endif %}"><span class="icon-bullhorn"></span> Unpromote</a>
-            <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" class="btn btn-primary promote {% if promoted %}hide{% endif %}"><span class="icon-bullhorn"></span> Promote</a>
-            <button type="button" class="btn btn-default promotes-count">{{ ad.promoteesCount }}</button>
-          </div>
-          <a href="{{ app.request.uri }}" class="tweet block-item btn btn-twitter" data-via="adstacy" data-text="{{ ad.description }}">
-            <span aria-hidden="true" data-icon="&#xe002;"></span> Twitter
-          </a>
-          <a href="{{ app.request.uri }}" class="facebook-share block-item btn btn-facebook">
-            <span aria-hidden="true" data-icon="&#xe003;"></span> Facebook
-          </a>
-          {% if app.user == user %}
-            <a href="{{ path('adstacy_app_ad_edit', {id: ad.id}) }}" class="btn btn-primary">Edit</a>
-            <a href="#" data-toggle="modal" data-target="#confirm-modal" class="btn btn-primary">Delete</a>
-          {% endif %}
-        </div>
+    <div class="ad-detail-section toolbar clearfix">
+      <div>
+        {% include 'AdstacyAppBundle:User:user_mini.html.twig' with { user: ad.user, text: '2 minutes ago' } %}
       </div>
+      <div class="pull-right">
+        <div class="btn-group">
+          {% set promoted = app.user.hasPromote(ad) %}
+          <a href="{{ path('adstacy_app_ad_unpromote', {id: ad.id}) }}" class="btn btn-primary unpromote {% if not promoted %}hide{% endif %}"><span class="icon-bullhorn"></span> Unpromote</a>
+          <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" class="btn btn-primary promote {% if promoted %}hide{% endif %}"><span class="icon-bullhorn"></span> Promote</a>
+          <button type="button" class="btn btn-default promotes-count">{{ ad.promoteesCount }}</button>
+        </div>
+        <a href="{{ app.request.uri }}" class="tweet btn btn-twitter" data-via="adstacy" data-text="{{ ad.description }}">
+          <span aria-hidden="true" data-icon="&#xe002;"></span> Twitter
+        </a>
+        <a href="{{ app.request.uri }}" class="facebook-share btn btn-facebook">
+          <span aria-hidden="true" data-icon="&#xe003;"></span> Facebook
+        </a>
+        {% if app.user == user %}
+          <a href="{{ path('adstacy_app_ad_edit', {id: ad.id}) }}" class="btn btn-primary">Edit</a>
+          <a href="#" data-toggle="modal" data-target="#confirm-modal" class="btn btn-primary">Delete</a>
+        {% endif %}
+      </div>
+    </div>
+    <div class="ad-detail-section">
+      <p>{{ parse_hashtag(ad.description) }}</p>
+    </div>
     <div class="text-center">
       {% set src = vich_uploader_asset(ad.image, 'file') %}
       <img src="{{ src }}" alt="{{ ad.description }}">
     </div>
 
-    <div class="ad-detail-section">
-      <p>{{ parse_hashtag(ad.description) }}</p>
-    </div>
 
     {% if ad.content %}
       <div class="ad-detail-section">
