--- a/src/Adstacy/UserBundle/Resources/views/Profile/edit.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Profile/edit.html.twig
@@ -68,6 +68,13 @@
         </div>
       </div>
 
+      <div class="form-group">
+        <label class="control-label">&nbsp;</label>
+        <div class="form-widget">
+          <a href="{{ path('fos_user_resetting_request') }}">forgot your password?</a>
+        </div>
+      </div>
+
       {{ form_rest(form) }}
 
     {{ form_end(form) }}
